# webview

./: Cargo.toml
assets/: index.css  index.htm  index.js
src/: disable_cors.js  error.rs  init.js  ipc.rs  logger.rs  main.rs  service.rs
