[package]
name = "webview"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
wry = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = "2.0"
include_dir = "0.7"
